UI补充；后端补充

--- a/public/splashscreen/splashscreen.html
+++ b/public/splashscreen/splashscreen.html
@@ -26,7 +26,7 @@
             <!-- Logo -->
             <div class="logo-container">
                 <div class="logo-circle">
-                    <img src="/images/xfs.png" class="icon"/>
+                    <img src="/logo.svg" class="icon"/>
                 </div>
             </div>
 
@@ -298,7 +298,7 @@
 
       .progress-ring-fill {
         fill: none;
-        stroke: #8bc34a;
+        stroke: #f36b3a;
         stroke-width: 6;
         stroke-linecap: round;
         transition: stroke-dasharray 0.4s ease;
@@ -361,10 +361,10 @@
 
   @keyframes glow {
     0% {
-      box-shadow: 0 0 20px rgba(115, 126, 120, 0.5);
+      box-shadow: 0 0 20px rgba(75, 85, 80, 0.5);
     }
     100% {
-      box-shadow: 0 0 30px rgba(43, 179, 112, 0.8), 0 0 40px rgba(102, 124, 115, 0.6);
+      box-shadow: 0 0 30px rgba(130, 136, 133, 0.8), 0 0 40px rgba(67, 71, 69, 0.6);
     }
   }
 
