UI补充；后端补充

--- a/public/splashscreen/splashscreen.html
+++ b/public/splashscreen/splashscreen.html
@@ -299,7 +299,7 @@
             <!-- Logo -->
             <div class="logo-container">
                 <div class="logo-circle">
-                    <img src="/logo.svg" class="icon"/>
+                    <img src="/logo.png" class="icon"/>
                 </div>
             </div>
 
